# PROMPT

./: .clangd  .gitignore  .mypy.ini  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  regression.yml
scripts/: prompt-driver  prompt_driver.py  slamp-driver
src/: CMakeLists.txt
src/SLAMPcustom/consumer/: compile_commands.json
src/SLAMPsmtxq/consumer/: compile_commands.json
src/binary-instrumentation/PinTool/: .gitignore  buffer_linux.cpp  count_mem.cpp  ext_time_measure.cpp  makefile
src/instrumentation/: CMakeLists.txt  Metadata.h  Namer.cpp  SLAMP.cpp  SLAMP.h
src/instrumentation/utils/: CallSiteFactory.cpp  CastUtil.cpp  CastUtil.h  FindUnderlyingObjects.cpp  GlobalCtors.cpp  Indeterminate.cpp  Indeterminate.h  InstInsertPt.cpp
src/lib/: CMakeLists.txt  CastUtil.cpp  CastUtil.h  Indeterminate.cpp  MemoryMeasure.cpp  SLAMP.cpp
src/runtime/: CMakeLists.txt
src/runtime/Events/: DepModEvents.yaml  FrontendGenerator.py  PROMPTQueueProtocol.py  ProfilingModule.h  README.md  api.yaml  consumer.cpp  custom_produce.h  frontend.cpp  frontend_template.cpp  slamp_ext_hooks.cpp  slamp_hooks.h  slamp_produce.h
src/runtime/Events/configs/: DepModEvents.yaml  DepModule_TrackContext_Events.yaml  LoadedValueModEvents.yaml  ObjectLifetimeModEvents.yaml  PointsToModEvents.yaml  PrivateerProfilerEvents.yaml  WholeProgramDepModEvents.yaml  api.yaml
src/runtime/ProfilingModules/: CMakeLists.txt  CircularQueue.h  ContextManager.h  DependenceModule.cpp  DependenceModule.h  DependenceWithContextModule.cpp  DependenceWithContextModule.h  HTContainer.h  LoopHierarchy.h  MemoryProfile.h  ObjectLifetimeModule.cpp  PointsToModule.h  PrivateerProfiler.cpp  PrivateerProfiler.h  Profile.h  WholeProgramDependenceModule.cpp  WholeProgramDependenceModule.h  slamp_shadow_mem.h
src/runtime/ProfilingModules/privateer/: profiler.cpp
src/runtime/SLAMPboost/: CMakeLists.txt
src/runtime/SLAMPboost/consumer/: CMakeLists.txt
src/runtime/SLAMPcustom/: CMakeLists.txt  CustomSend.cpp  CustomSend_all.cpp  CustomSend_pt.cpp  sw_queue_astream.h
src/runtime/SLAMPcustom/consumer/: CMakeLists.txt  consumer.cpp
src/runtime/SLAMPcustom/consumer/ProfilingModules/: DependenceModule.h
src/runtime/SLAMPcustom/legacy/: CustomSend.cpp  CustomSend_lv.cpp  CustomSend_ol.cpp
src/runtime/SLAMPsmtxq/: CMakeLists.txt  SmtxSend.cpp  sw_queue.c  sw_queue_astream.h
src/runtime/SLAMPsmtxq/consumer/: CMakeLists.txt  consumer.cpp
src/runtime/SLAMPstats/: CMakeLists.txt  Stats.cpp
src/runtime/backend/: consumer.cpp  slamp_consume.h
src/runtime/frontend/: .gitignore  CMakeLists.txt  FrontendGenerator.py  PROMPTQueueProtocol.py  custom_produce.h  frontend.cpp  slamp_hooks.h  slamp_hooks_external.h  slamp_produce.h
src/runtime/frontend/configs/: DepModEvents.yaml  ObjectLifetimeModEvents.yaml  WholeProgramDepModEvents.yaml  api.yaml
src/runtime/malloc_hook/: CMakeLists.txt  malloc_hook.c  malloc_hook.h
tests/regression/: Makefile.generic
tests/regression/specpriv_counter1/src/: Makefile
tests/regression/test1/profiles/: gt.profile
tests/regression/test1/src/: Makefile
tests/regression/test_constant_value/src/: Makefile
tests/regression/test_dynlib/src/: Makefile  my_memcpy.c.bk  test.cpp
tests/regression/test_linear_addr/src/: Makefile
tests/regression/test_multi_thread/src/: Makefile
tests/unit/: CMakeLists.txt  CastUtilTest.cpp
